--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <nav>
         <h2>banana talk</h2>
     </nav>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea id="text-input" placeholder="you can put a sentence in english"></textarea>
     <br><br>
-    <button id="tran-btn">Translate To banana</button>
+    <button id="trans-btn">Translate To banana</button>
     <br>
-    <p>Translation will come here 👇</p>
+    <p><strong>Translation will come here 👇</strong></p>
+
+    <div id="text-output"></div>
 
     <footer>
         <p><strong>about</strong></p>
