--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>banana app</title>
 </head>
 
@@ -13,13 +14,13 @@
     <nav>
         <h2>banana talk</h2>
     </nav>
-    <textarea id="text-input" placeholder="you can put a sentence in english"></textarea>
+    <textarea id="input-el" placeholder="you can put a sentence in english"></textarea>
     <br><br>
-    <button id="trans-btn">Translate To banana</button>
+    <button id="btn">Translate To banana</button>
     <br>
     <p><strong>Translation will come here 👇</strong></p>
 
-    <div id="text-output"></div>
+    <div ><p id="output-el"></p></div>
 
     <footer>
         <p><strong>about</strong></p>
